updated_home and 2019 dan pict

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1766">
-	<link rel="stylesheet" type="text/css" href="style.css?4710">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4396">
+	<link rel="stylesheet" type="text/css" href="style.css?7846">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -90,7 +90,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col ">
+			<div class="col">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 					Happy Hour November 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running two Happy Hour Talks befgore the 2022 Winter break we will start again from February April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running two Happy Hour Talks before the 2022 Winter break, we will start again from February to April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
@@ -216,9 +216,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?3950"></script>
+<script src="./js/bootstrap.bundle.min.js?966"></script>
+<script src="./js/blocs.min.js?3319"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
