--- a/spring-2019.html
+++ b/spring-2019.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?460">
-	<link rel="stylesheet" type="text/css" href="style.css?1123">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?57">
+	<link rel="stylesheet" type="text/css" href="style.css?2723">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Spring 2019</title>
@@ -91,7 +91,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col ">
+			<div class="col">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 		<div class="row">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/dan.jpg" class="img-fluid mx-auto d-block lazyload" alt="dan" />
+					<img src="img/lazyload-ph.png" data-src="img/dan_2.jpg" class="img-fluid mx-auto d-block lazyload " alt="dan" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Dan Benham</strong> <br>Strategist at <br>Studio Republic <br><strong>31/1/2019</strong>
@@ -358,9 +358,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?3950"></script>
+<script src="./js/bootstrap.bundle.min.js?966"></script>
+<script src="./js/blocs.min.js?3319"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
