--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4396">
-	<link rel="stylesheet" type="text/css" href="style.css?7846">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1961">
+	<link rel="stylesheet" type="text/css" href="style.css?7517">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -114,7 +114,7 @@
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-10-30%20at%2014.23.54.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" />
+					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-10-30%20at%2014.23.54.png" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Getting Your First Job<br>&amp; Placements<br><strong>24/11/2022</strong>
@@ -124,7 +124,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto lazyload" alt="John Kilmister" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>To Be&nbsp;Confirmed</strong><br>TBC&nbsp;<br>TBC<br><strong>1/12/2022</strong><br>
@@ -134,7 +134,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>Lee Mallon</strong><br>Strategic Technical <br>Consultant&nbsp;<br><strong>24/3/2022</strong><br>
@@ -144,7 +144,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
@@ -156,7 +156,7 @@
 		<div class="row voffset-md object-hidden">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Graduate Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
@@ -166,7 +166,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Work Experience&nbsp;<br>&amp; Placements<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -176,7 +176,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -216,9 +216,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3950"></script>
-<script src="./js/bootstrap.bundle.min.js?966"></script>
-<script src="./js/blocs.min.js?3319"></script>
+<script src="./js/jquery.min.js?7566"></script>
+<script src="./js/bootstrap.bundle.min.js?7540"></script>
+<script src="./js/blocs.min.js?6415"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
