--- a/spring-2017.html
+++ b/spring-2017.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1637">
-	<link rel="stylesheet" type="text/css" href="style.css?3604">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6882">
+	<link rel="stylesheet" type="text/css" href="style.css?5081">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Spring 2017</title>
@@ -91,7 +91,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col ">
+			<div class="col">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -325,7 +325,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-md-6 col-sm-12">
-				<img src="img/lazyload-ph.png" data-src="img/matt_Jackson_MS.jpg" class="img-fluid lazyload" alt="Neil Sweeney" />
+				<img src="img/lazyload-ph.png" data-src="img/matt_Jackson_MS.jpg" class="img-fluid lazyload" alt="Matt Jackson" />
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<h2 class="mg-lg tc-black-2 bloc-12-h2">
@@ -368,9 +368,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?7566"></script>
+<script src="./js/bootstrap.bundle.min.js?7540"></script>
+<script src="./js/blocs.min.js?6415"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
