--- a/spring-2020.html
+++ b/spring-2020.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5251">
-	<link rel="stylesheet" type="text/css" href="style.css?8551">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2472">
+	<link rel="stylesheet" type="text/css" href="style.css?4425">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>2020</title>
@@ -91,7 +91,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col ">
+			<div class="col">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -300,7 +300,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/kristina.png" class="img-fluid mx-auto d-block lazyload" alt="David Henderson" />
+					<img src="img/lazyload-ph.png" data-src="img/kristina.png" class="img-fluid mx-auto d-block lazyload" alt="kristina" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>Kristina Angelova</strong> <br>Director &amp; Digital Strategist RIKA Digital<br><strong>1/4/2020</strong><br>
@@ -322,7 +322,7 @@
 		<div class="row voffset-md d-flex">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/David_Henderson.png" class="img-fluid mx-auto d-block lazyload" alt="Phil Moore" />
+					<img src="img/lazyload-ph.png" data-src="img/David_Henderson.png" class="img-fluid mx-auto d-block lazyload" alt="David_Henderson" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>David Henderson</strong> <br>CTO at<br>Fresh Relevance.<br><strong>22/4/2020</strong><br>
@@ -332,7 +332,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/laura_yarrow.png" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_1" />
+					<img src="img/lazyload-ph.png" data-src="img/laura_yarrow.png" class="img-fluid mx-auto d-block lazyload" alt="laura_yarrow" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>Laura Yarrow</strong><br>Senior UX Consultant<br>at Experience UX<br><strong>22/4/2020</strong><br>
@@ -390,9 +390,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?7566"></script>
+<script src="./js/bootstrap.bundle.min.js?7540"></script>
+<script src="./js/blocs.min.js?6415"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
