--- a/spring-2018.html
+++ b/spring-2018.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5299">
-	<link rel="stylesheet" type="text/css" href="style.css?1796">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6605">
+	<link rel="stylesheet" type="text/css" href="style.css?3928">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>spring 2018</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto">
+								<ul class="site-navigation nav navbar-nav ml-auto ">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -59,7 +59,10 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
+												</li>
+												<li class="nav-item">
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -127,7 +130,7 @@
 		</div>
 		<div class="row voffset-md">
 			<div class="col-md-6 col-sm-12">
-				<img src="img/lazyload-ph.png" data-src="img/claire.jpg" class="img-fluid lazyload " height="470" width="570" alt="Claire" />
+				<img src="img/lazyload-ph.png" data-src="img/claire.jpg" class="img-fluid lazyload" height="470" width="570" alt="Claire" />
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<h2 class="mg-lg tc-black-2 clare-h2">
@@ -335,9 +338,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?7566"></script>
-<script src="./js/bootstrap.bundle.min.js?7540"></script>
-<script src="./js/blocs.min.js?6415"></script>
+<script src="./js/jquery.min.js?8483"></script>
+<script src="./js/bootstrap.bundle.min.js?7682"></script>
+<script src="./js/blocs.min.js?5605"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
