--- a/spring-2022.html
+++ b/spring-2022.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2190">
-	<link rel="stylesheet" type="text/css" href="style.css?1058">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7960">
+	<link rel="stylesheet" type="text/css" href="style.css?4908">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home-1</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto">
+								<ul class="site-navigation nav navbar-nav ml-auto ">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -59,7 +59,10 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
+												</li>
+												<li class="nav-item">
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -159,7 +162,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/vanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
+					<img src="img/lazyload-ph.png" data-src="img/vanessa_3.jpg" class="img-fluid mx-auto d-block lazyload" alt="Vanessa Davies" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
@@ -231,9 +234,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?7566"></script>
-<script src="./js/bootstrap.bundle.min.js?7540"></script>
-<script src="./js/blocs.min.js?6415"></script>
+<script src="./js/jquery.min.js?8483"></script>
+<script src="./js/bootstrap.bundle.min.js?7682"></script>
+<script src="./js/blocs.min.js?5605"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
