--- a/spring-2017.html
+++ b/spring-2017.html
@@ -62,7 +62,7 @@
 													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="index.html" class="a-btn nav-link">New Link</a>
+													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
