--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1450">
-	<link rel="stylesheet" type="text/css" href="style.css?3841">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5935">
+	<link rel="stylesheet" type="text/css" href="style.css?6228">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -61,7 +61,7 @@
 													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -107,17 +107,17 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="mg-md h3-style h1-style">
-					Happy Hour November 2022
+					Happy Hour 2022-23
 				</h1>
-				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running two Happy Hour Talks before the 2022 Winter break, we will start again from February to April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
+				<p class="p-1-bloc-2-style mg-lg ">
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks before the 2022 Winter break, and we will start again from March to April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-10-30%20at%2014.23.54.png" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
+					<img src="img/lazyload-ph.png" data-src="img/pict%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Getting Your First Job<br>&amp; Placements<br><strong>24/11/2022</strong>
@@ -127,21 +127,21 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
-							<strong>To Be&nbsp;Confirmed</strong><br>TBC&nbsp;<br>TBC<br><strong>1/12/2022</strong><br>
-						</p><a href="#" class="btn btn-block btn-ferrari-red">Event 2 register</a>
+							<strong>John Kilmister</strong><br>A Day in the Life of a Developer &amp; Cloud Dev<br><strong>9/3/2023</strong><br>
+						</p><a href="https://www.eventbrite.co.uk/e/john-kilmister-tickets-564408349567" class="btn btn-block btn-ferrari-red">Event 2 register</a>
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
-							<strong>Lee Mallon</strong><br>Strategic Technical <br>Consultant&nbsp;<br><strong>24/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/288424323917" class="btn btn-style btn-ferrari-red btn-block">Event 3 register</a>
+							<strong>TBC</strong><br>TBC&nbsp;<br>TBC<br><strong>23/3/2023</strong><br>
+						</p><a href="#" class="btn btn-style btn-ferrari-red btn-block">Event 3 register</a>
 					</div>
 				</div>
 			</div>
@@ -219,9 +219,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8483"></script>
-<script src="./js/bootstrap.bundle.min.js?7682"></script>
-<script src="./js/blocs.min.js?5605"></script>
+<script src="./js/jquery.min.js?3500"></script>
+<script src="./js/bootstrap.bundle.min.js?3091"></script>
+<script src="./js/blocs.min.js?7635"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
