--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6818">
-	<link rel="stylesheet" type="text/css" href="style.css?8329">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8020">
+	<link rel="stylesheet" type="text/css" href="style.css?4228">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -58,10 +58,10 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-												<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -93,7 +93,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col ">
+			<div class="col">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -102,7 +102,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-black l-bloc" id="bloc-3">
+<div class="bloc tc-black l-bloc " id="bloc-3">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="offset-lg-2 col-lg-8">
@@ -110,7 +110,10 @@
 					About
 				</h1>
 				<p class="p-style">
-					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub&nbsp;so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br>
+					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br>
+				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB" />
+				<p class="p-style">
+					<br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub&nbsp;so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br>
 				</p>
 			</div>
 		</div>
@@ -158,9 +161,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5048"></script>
-<script src="./js/bootstrap.bundle.min.js?2776"></script>
-<script src="./js/blocs.min.js?2178"></script>
+<script src="./js/jquery.min.js?3201"></script>
+<script src="./js/bootstrap.bundle.min.js?7143"></script>
+<script src="./js/blocs.min.js?6390"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
