--- a/spring-2020.html
+++ b/spring-2020.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8850">
-	<link rel="stylesheet" type="text/css" href="style.css?1859">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9140">
+	<link rel="stylesheet" type="text/css" href="style.css?7826">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>2020</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -62,7 +62,7 @@
 													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -71,7 +71,8 @@
 													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>												</li>
+													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+												</li>
 											</ul>
 										</div>
 									</li>
@@ -392,9 +393,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8483"></script>
-<script src="./js/bootstrap.bundle.min.js?7682"></script>
-<script src="./js/blocs.min.js?5605"></script>
+<script src="./js/jquery.min.js?3201"></script>
+<script src="./js/bootstrap.bundle.min.js?7143"></script>
+<script src="./js/blocs.min.js?6390"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
