--- a/spring-2022.html
+++ b/spring-2022.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7960">
-	<link rel="stylesheet" type="text/css" href="style.css?4908">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3235">
+	<link rel="stylesheet" type="text/css" href="style.css?7390">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home-1</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -62,7 +62,7 @@
 													<a href="spring-2022.html" class="nav-link a-btn">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="a-btn nav-link">Spring 2020</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
 													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
@@ -71,7 +71,8 @@
 													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>												</li>
+													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+												</li>
 											</ul>
 										</div>
 									</li>
@@ -116,16 +117,7 @@
 		</div>
 		<div class="row voffset">
 			<div class="col-12">
-				<div class="embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://player.vimeo.com/video/693731358?h=21e7e02a3d&amp;color=61e8c2&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" allowfullscreen allow="autoplay; fullscreen; picture-in-picture">
-					</iframe>
-				</div>
-				<h3 class="mg-md">
-					Happy Hour Week 1: Mending the Digital Skills Gap with Richard Cooper
-				</h3>
-				<p>
-					Brightful: <a href="https://wearebrightful.com/">wearebrightful.com</a> &amp; Winchester Creatives: <a href="https://www.winchestercreatives.co.uk/">winchestercreatives.co.uk</a><br>
-				</p>
+				<img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB_2" />
 			</div>
 		</div>
 		<div class="row voffset-lg">
@@ -193,7 +185,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-03-30%20at%2019.20.53.png" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-03-30%20at%2019.20.53.png" class="img-fluid mx-auto d-block lazyload" alt="Rika Logo" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -233,9 +225,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8483"></script>
-<script src="./js/bootstrap.bundle.min.js?7682"></script>
-<script src="./js/blocs.min.js?5605"></script>
+<script src="./js/jquery.min.js?3201"></script>
+<script src="./js/bootstrap.bundle.min.js?7143"></script>
+<script src="./js/blocs.min.js?6390"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
