--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5935">
-	<link rel="stylesheet" type="text/css" href="style.css?6228">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4250">
+	<link rel="stylesheet" type="text/css" href="style.css?1716">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -109,9 +109,9 @@
 				<h1 class="mg-md h3-style h1-style">
 					Happy Hour 2022-23
 				</h1>
-				<p class="p-1-bloc-2-style mg-lg ">
+				<p class="p-1-bloc-2-style mg-lg">
 					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks before the 2022 Winter break, and we will start again from March to April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
-				</p>
+				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" />
 			</div>
 		</div>
 		<div class="row voffset-lg">
@@ -135,7 +135,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
@@ -219,9 +219,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3500"></script>
-<script src="./js/bootstrap.bundle.min.js?3091"></script>
-<script src="./js/blocs.min.js?7635"></script>
+<script src="./js/jquery.min.js?3201"></script>
+<script src="./js/bootstrap.bundle.min.js?7143"></script>
+<script src="./js/blocs.min.js?6390"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
