--- a/about.html
+++ b/about.html
@@ -126,9 +126,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-				<div >
-					<iframe src="img/lazyload-ph.png" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2515.820942931401!2d-1.4072186842519545!3d50.9085291795411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487476b195ede2d7%3A0x81dc6aae8e66c0b5!2sSir+James+Matthews+Building%2C+Southampton!5e0!3m2!1sen!2suk!4v1550229849446" width="600" height="450" frameborder="0" style="border:0" allowfullscreen="" class="lazyload"></iframe>
-					
+				<div>
+					<iframe src="img/lazyload-ph.png" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2515.8320401066107!2d-1.4029550225347587!3d50.90832385428971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487476b1943c33e9%3A0x7b3d2a7c433db059!2sSolent%20University!5e0!3m2!1sen!2sus!4v1687784208244!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		
 				</div>
 			</div>
 		</div>
